skeleton for posts on feed

--- a/src/App.css
+++ b/src/App.css
@@ -8,16 +8,31 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: rgb(32, 38, 62);
   min-height: 100vh;
-  display: flex;
+  /*display: flex;*/
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(20px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#square {
+  width: 100px;
+  height: 200px;
+  background-color: darkgrey;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  /*align-items: center;*/
+  height: 200px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
