--- a/src/pages/create_account.css
+++ b/src/pages/create_account.css
@@ -1,6 +1,6 @@
 .App-header {
     text-align: center;
-    background-color: navy;
+    background-color: lightsteelblue;
     color: white;
     padding: 20px;
   }
