--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+.gymstant-title {
+  font-family: 'Montserrat', sans-serif; /* The font you chose */
+  font-size: 60px; /* Size of the font */
+  color: rgb(14, 1, 1); /* Set the fill color to white */
+  //-webkit-text-stroke: 2px rgb(25, 126, 167); /* Bold outline for Webkit browsers */
+  /* text-shadow:
+    -2px -2px 0 rgb(25, 126, 167),  
+     2px -2px 0 rgb(25, 126, 167),
+     -2px  2px 0 rgb(25, 126, 167),
+     2px  2px 0 rgb(25, 126, 167); Simulate bold outline with text-shadow */
+}
+
 .App {
   text-align: center;
 }
