--- a/src/App.css
+++ b/src/App.css
@@ -109,34 +109,55 @@ body .fancy-header {
 }
 
 .fancy-post-button {
-  padding: 20px 50px;
-  font-size: 16px; /* corrected the typo in font-size property */
-  background-color: #4ae2ad91; 
-  color: #ffffff;
-  border: none;
-  border-radius: 5px;
+  padding: 15px 30px;
+  font-size: 18px;
+  background-color: #fff; /* White background */
+  color: #4ae2ad; /* Green text color */
+  border: 4px solid rgba(74, 144, 226, 0.7); /* Transparent blue border */
+  border-radius: 8px;
   cursor: pointer;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease; 
-  position: fixed; /* Changed position to fixed */
-  top: 3px; /* Positioned at the top */
-  left: 3px; /* Positioned at the left */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease, transform 0.2s ease-in-out;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 1000;
 }
 
-.fancy-search-bar {
-  padding: 10px 30px; /* Adjusted padding for better fit in search area */
-  font-size: 16px;
-  background-color: #4ae2ad91;
-  color: #333333;
-  border: none;
-  border-radius: 5px;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease;
-  position: fixed; /* Keeps the button in a fixed position */
-  top: 3px; /* Positioned at the top */
-  right: 3px; /* Positioned at the right */
-  z-index: 1000; /* Ensures the button is above other elements */
+.fancy-post-button:hover {
+  background-color: rgba(74, 144, 226, 0.7); /* Transparent blue on hover */
+  color: #ffffff; /* White text color on hover */
+  transform: scale(1.05);
 }
+
+
+
+
+
+.fancy-search-bar {
+  padding: 8px 20px;
+  font-size: 16px;
+  background-color: #fff;
+  color: #333;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease, transform 0.2s ease-in-out;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 1000;
+}
+
+.fancy-search-bar:hover {
+  background-color: rgba(74, 144, 226, 0.7); /* Transparent blue on hover */
+  color: #ffffff; /* White text color on hover */
+  transform: scale(1.05);
+}
+.fancy-search-bar:hover::placeholder {
+  color: #ffffff; /* Adjust as needed for the placeholder color on hover */
+}
+
 
 .fancy-search-bar::placeholder {
   color: #888888;
