added basic posting functionality
added basic posting functionality such that each user can post and can view other's post with the show/hide button implemented todo: fix phone number being buggy by clearing out all user's form input data when incorrect input, todo: possibly add text to each post and associate it that way (write image links oer user instead of calling by ui and filename?), formatting css, ux #clicks optimized for setup main interaction idea find gym workout partner, etx

--- a/src/components/image.css
+++ b/src/components/image.css
@@ -15,3 +15,10 @@
   height: 10vw;
   object-fit: cover;
 }
+
+.bounded-image {
+  max-width: 30vw;
+  max-height: 30vw;
+  width: auto;
+  height: auto;
+}
